--- a/webapplab/WebApplication2/appsettings.json
+++ b/webapplab/WebApplication2/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DATABASE_URL": "localhost",
+  "DATABASE_PASSWORD": "password",
+  "DATABASE_USER": "postgres"
 }
