--- a/misc/docker-compose.yml
+++ b/misc/docker-compose.yml
@@ -19,7 +19,6 @@
 #       - 80:80
 #     environment:
 #       - PMA_ARBITRARY=1
-version: '3.3'
 services:
   postgres:
     image: postgres
@@ -29,3 +28,9 @@ services:
       POSTGRES_PASSWORD: "password"
     ports:
       - "5432:5432"
+  # app:
+  #   build: 
+  #     context: ../webapplab/WebApplication2/
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "8080:80"
